As per Johannes's comment I removed the conversions between SFEE soap objects and the generic artifact java objects.
Also the artifact fields are managed by the ArtifactMetaData instead of depending on Java reflection to get the SFEE artifact fields.

Removed JDBC access logic in the code and used OpenAdapter classes for database access.

git-svn-id: https://ctf.open.collab.net/svn/repos/ccf/trunk@479 6771e1e2-0f46-0410-b5d7-d846ff89f743